Rename Client to View, create new Client class (this one does not extend Application anymore), add '-State' suffix to ViewStates, fix relative paths to work both in IntelliJ and when run from jar